register image sizes and squash bugs

--- a/wp-content/themes/labor-day/src/styles/layouts/singles/_events.scss
+++ b/wp-content/themes/labor-day/src/styles/layouts/singles/_events.scss
@@ -15,9 +15,11 @@
 
 		&__image {
 			order: unset;
-			padding: 0 1rem;
-			max-height: 60rem;
 			@include m.fitMedia($fit: contain);
+			img {
+				aspect-ratio: 16 / 9;
+				height: auto;
+			}
 		}
 	}
 
